Update Customer Translation

--- a/app/locale/zh_TW/Mage_Customer.csv
+++ b/app/locale/zh_TW/Mage_Customer.csv
@@ -1,6 +1,6 @@
-"City","City"
-"Current customer password is empty","Current customer password is empty"
-"A new password was sent","A new password was sent"
+"City","縣市"
+"Current customer password is empty","目前密碼為空白"
+"A new password was sent","新的密碼已經寄出"
 "Cannot delete customer","Cannot delete customer"
 "Invalid region for country specified in the address","Invalid region for country specified in the address"
 "Telephone","Telephone"
@@ -15,31 +15,31 @@
 "My Account","My Account"
 "Fax","Fax"
 "Payment Method","Payment Method"
-"Customer email already exists","Customer email already exists"
-"Edit Address","Edit Address"
-"Company","Company"
-"Created From","Created From"
+"Customer email already exists","顧客郵件已存在"
+"Edit Address","編輯地址"
+"Company","公司"
+"Created From","建立訂單"
 "Invalid customer ID","Invalid customer ID"
 "Customer group already exists.","Customer group already exists."
 "Zip/Postal Code","Zip/Postal Code"
-"You have not set a primary billing address.","You have not set a primary billing address."
-"You are currently subscribed to our newsletter","You are currently subscribed to our newsletter"
+"You have not set a primary billing address.","您尚未設定主要收款地址。"
+"You are currently subscribed to our newsletter","您目前已訂閱我們的新聞"
 "New passwords do not match","New passwords do not match"
 "There was an error while deleting the address","There was an error while deleting the address"
 "Error during saving customer","Error during saving customer"
 "Error during updating the password","Error during updating the password"
 "Newsletter Subscriptions","Newsletter Subscriptions"
 "Address Book","Address Book"
-"Create New Customer Account","Create New Customer Account"
+"Create New Customer Account","建立新客戶帳戶"
 "Password was successfully updated","Password was successfully updated"
 "Admin","Admin"
-"Country","Country"
+"Country","國家"
 "Error during saving customer address","Error during saving customer address"
 "The address was successfully saved","The address was successfully saved"
-"Change Account Password","Change Account Password"
+"Change Account Password","更改帳戶密碼"
 "My Balance","My Balance"
 "The address was successfully deleted","The address was successfully deleted"
-"You have not set a primary shipping address.","You have not set a primary shipping address."
+"You have not set a primary shipping address.","您還沒有設定主要的郵寄地址"
 "Invalid login or password","Invalid login or password"
 "Login","Login"
 "Balance","Balance"
@@ -51,14 +51,14 @@
 "Street Address","Street Address"
 "Error during customer deletion","Error during customer deletion"
 "Last Name","Last Name"
-"Customer Group","Customer Group"
-"You are currently not subscribed to our newsletter","You are currently not subscribed to our newsletter"
+"Customer Group","顧客群"
+"You are currently not subscribed to our newsletter","您目前並沒有訂閱我們的新聞"
 "Invalid customer ID in the address data","Invalid customer ID in the address data"
 "Create Account","Create Account"
 "Use as My Primary %s Address","Use as My Primary <strong>%s</strong> Address"
 "My Orders","My Orders"
-"View Order","View Order"
-"You're now Logged Out","You're now Logged Out"
+"View Order","查看訂單"
+"You're now Logged Out","您現在已登出"
 "Ext. Price","Ext. Price"
 "Back to Login","Back to Login"
 "Edit Newsletters","Edit Newsletters"
@@ -66,19 +66,19 @@
 "Billing Information","Billing Information"
 "Last Viewed Items","Last Viewed Items"
 "Sign Up for Newsletter","Sign Up for Newsletter"
-"Edit Newsletter Subscription","Edit Newsletter Subscription"
+"Edit Newsletter Subscription","編輯新聞訂閱單"
 "Address Information","Address Information"
-"Edit Address Entry","Edit Address Entry"
-"Edit Account Information","Edit Account Information"
+"Edit Address Entry","編輯地址欄位"
+"Edit Account Information","編輯帳戶資訊"
 "Additional Address Entries","Additional Address Entries"
-"You have no additional entries in your address book.","You have no additional entries in your address book."
+"You have no additional entries in your address book.","您的地址簿已經沒有其他的欄位了。"
 "Forgot Your Password?","Forgot Your Password?"
 "My Wishlist","My Wishlist"
 "By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.","By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more."
-"You have placed no products yet.","You have placed no products yet."
+"You have placed no products yet.","您還沒有加入任何產品。"
 "Newsletters","Newsletters"
-"Your account balance is: %s","Your account balance is: <strong>%s</strong>"
-"You have no additional address entries in your address book.","You have no additional address entries in your address book."
+"Your account balance is: %s","您帳號內的餘額為： %s"
+"You have no additional address entries in your address book.","您的地址簿已經沒有其他的地址欄位了。"
 "Registered Customers","Registered Customers"
 "Default Billing Address","Default Billing Address"
 "Confirm Password","Confirm Password"
@@ -88,24 +88,24 @@
 "Are you sure you want to delete this address?","Are you sure you want to delete this address?"
 "Save","Save"
 "Current Password","Current Password"
-"You are currently subscribed to 'General Subscription'.","You are currently subscribed to 'General Subscription'."
+"You are currently subscribed to 'General Subscription'.","您目前已訂閱：'一般訂閱'"
 "Edit Personal Information","Edit Personal Information"
 "Continue Shopping","Continue Shopping"
 "Manage Addresses","Manage Addresses"
-"View Order List","View Order List"
+"View Order List","查看訂單列表"
 "Change Billing Address","Change Billing Address"
 "Items Order","Items Order"
 "Primary Shipping Address","Primary Shipping Address"
 "* Required Fields","* Required Fields"
-"You have no primary entries in your address book.","You have no primary entries in your address book."
+"You have no primary entries in your address book.","您尚未設定地址簿中的主要郵寄地址。"
 "From your My Account Dashboard you have the ability to view a snapshot of your recent account activity. Select a link below to view.","From your My Account Dashboard you have the ability to view a snapshot of your recent account activity. Select a link below to view."
 "Default Shipping Address","Default Shipping Address"
 "New Customers","New Customers"
 "Save Address","Save Address"
 "Use as my default shipping address","Use as my default <strong>shipping</strong> address"
-"You are currently subscribed to our newsletter.","You are currently subscribed to our newsletter."
+"You are currently subscribed to our newsletter.","您目前已訂閱我們的新聞"
 "Change Password","Change Password"
-"You have placed no orders yet.","You have placed no orders yet."
+"You have placed no orders yet.","您還沒有加入任何訂單。"
 "Account Information","Account Information"
 "Back","Back"
 "Save Password","Save Password"
@@ -146,17 +146,17 @@
 "Address","Address"
 "To Cart","To Cart"
 "Password","Password"
-"Wishlist","Wishlist"
+"Wishlist","希望清單"
 "Go to Address Book","Go to Address Book"
-"You have been successfully logged out and will be redirected to our homepage in 5 seconds.","You have been successfully logged out and will be redirected to our homepage in 5 seconds."
+"You have been successfully logged out and will be redirected to our homepage in 5 seconds.","您目前已經登出，將於 5 秒後返回我們的首頁。"
 "Email Address","Email Address"
 "Remove","Remove"
-"You have no default billing address in your address book.","You have no default billing address in your address book."
+"You have no default billing address in your address book.","您尚未設定地址簿中預設的收款地址。"
 "Create an Account","Create an Account"
 "Total","Total"
 "Addresses","Addresses"
 "Subscribe","Subscribe"
-"You have no default shipping address in your address book.","You have no default shipping address in your address book."
+"You have no default shipping address in your address book.","您尚未設定地址簿中預設的郵寄地址。"
 "Change Shipping Address","Change Shipping Address"
 "Retrieve your password here","Retrieve your password here"
 "Newsletter","Newsletter"
