--- a/trunk/app/locale/zh_TW/Mage_Customer.csv
+++ b/trunk/app/locale/zh_TW/Mage_Customer.csv
@@ -3,7 +3,7 @@
 "A new password was sent","新的密碼已經寄出"
 "Cannot delete customer","Cannot delete customer"
 "Invalid region for country specified in the address","Invalid region for country specified in the address"
-"Telephone","Telephone"
+"Telephone","電話號碼"
 "State/Province","State/Province"
 "First Name","First Name"
 "Account information was successfully saved","Account information was successfully saved"
