--- a/app/locale/zh_TW/Mage_Customer.csv
+++ b/app/locale/zh_TW/Mage_Customer.csv
@@ -1,163 +1,163 @@
 "City","縣市"
 "Current customer password is empty","目前密碼為空白"
 "A new password was sent","新的密碼已經寄出"
-"Cannot delete customer","Cannot delete customer"
-"Invalid region for country specified in the address","Invalid region for country specified in the address"
+"Cannot delete customer","無法刪除顧客"
+"Invalid region for country specified in the address","地址中的國家地域錯誤"
 "Telephone","電話號碼"
-"State/Province","State/Province"
-"First Name","First Name"
-"Account information was successfully saved","Account information was successfully saved"
-"Invalid current password","Invalid current password"
-"Error while updating the password","Error while updating the password"
-"Wrong region id by selected country","Wrong region id by selected country"
-"Email","Email"
-"This email address was not found in our records","This email address was not found in our records"
-"My Account","My Account"
-"Fax","Fax"
-"Payment Method","Payment Method"
+"State/Province","州/省"
+"First Name","名"
+"Account information was successfully saved","帳戶資料儲存成功"
+"Invalid current password","錯誤的目前密碼"
+"Error while updating the password","更新密碼錯誤"
+"Wrong region id by selected country","選擇的地域 id 錯誤"
+"Email","電子郵件"
+"This email address was not found in our records","在資料中無法找到此電子郵件地址"
+"My Account","我的帳戶"
+"Fax","傳真"
+"Payment Method","支付方式"
 "Customer email already exists","顧客郵件已存在"
 "Edit Address","編輯地址"
 "Company","公司"
 "Created From","建立訂單"
-"Invalid customer ID","Invalid customer ID"
-"Customer group already exists.","Customer group already exists."
-"Zip/Postal Code","Zip/Postal Code"
+"Invalid customer ID","錯誤的顧客 ID"
+"Customer group already exists.","客戶群組已存在"
+"Zip/Postal Code","郵遞區號"
 "You have not set a primary billing address.","您尚未設定主要收款地址。"
-"You are currently subscribed to our newsletter","您目前已訂閱我們的新聞"
-"New passwords do not match","New passwords do not match"
-"There was an error while deleting the address","There was an error while deleting the address"
-"Error during saving customer","Error during saving customer"
-"Error during updating the password","Error during updating the password"
-"Newsletter Subscriptions","Newsletter Subscriptions"
-"Address Book","Address Book"
+"You are currently subscribed to our newsletter","您目前已訂閱我們的電子報"
+"New passwords do not match","新密碼不符合"
+"There was an error while deleting the address","在刪除地址時發生錯誤"
+"Error during saving customer","在儲存客戶時發生錯誤"
+"Error during updating the password","在更新密碼時發生錯誤"
+"Newsletter Subscriptions","電子報訂閱"
+"Address Book","地址簿"
 "Create New Customer Account","建立新客戶帳戶"
-"Password was successfully updated","Password was successfully updated"
-"Admin","Admin"
+"Password was successfully updated","密碼已成功更新"
+"Admin","管理員"
 "Country","國家"
-"Error during saving customer address","Error during saving customer address"
-"The address was successfully saved","The address was successfully saved"
+"Error during saving customer address","在儲存客戶地址時發生錯誤"
+"The address was successfully saved","地址已成功儲存"
 "Change Account Password","更改帳戶密碼"
 "My Balance","My Balance"
-"The address was successfully deleted","The address was successfully deleted"
+"The address was successfully deleted","該地址已成功刪除"
 "You have not set a primary shipping address.","您還沒有設定主要的郵寄地址"
-"Invalid login or password","Invalid login or password"
-"Login","Login"
+"Invalid login or password","錯誤的登入或密碼"
+"Login","登入"
 "Balance","Balance"
-"Thank you for registering with %s","Thank you for registering with %s"
-"Add New Address","Add New Address"
-"The address does not belong to this customer","The address does not belong to this customer"
+"Thank you for registering with %s","感謝您於 %s 註冊"
+"Add New Address","增加新地址"
+"The address does not belong to this customer","該地址不屬於此顧客"
 "Create In","Create In"
 "My Tags","My Tags"
-"Street Address","Street Address"
-"Error during customer deletion","Error during customer deletion"
-"Last Name","Last Name"
+"Street Address","街道地址"
+"Error during customer deletion","在刪除客戶時發生錯誤"
+"Last Name","姓"
 "Customer Group","顧客群"
-"You are currently not subscribed to our newsletter","您目前並沒有訂閱我們的新聞"
-"Invalid customer ID in the address data","Invalid customer ID in the address data"
-"Create Account","Create Account"
-"Use as My Primary %s Address","Use as My Primary <strong>%s</strong> Address"
-"My Orders","My Orders"
+"You are currently not subscribed to our newsletter","您目前並沒有訂閱我們的電子報"
+"Invalid customer ID in the address data","地址資料中的顧客 ID 不正確"
+"Create Account","建立帳戶"
+"Use as My Primary %s Address","設定為我的主要 <strong>%s</strong> 地址"
+"My Orders","我的訂單"
 "View Order","查看訂單"
 "You're now Logged Out","您現在已登出"
 "Ext. Price","Ext. Price"
-"Back to Login","Back to Login"
-"Edit Newsletters","Edit Newsletters"
-"Update","Update"
-"Billing Information","Billing Information"
-"Last Viewed Items","Last Viewed Items"
-"Sign Up for Newsletter","Sign Up for Newsletter"
+"Back to Login","返回登錄"
+"Edit Newsletters","編輯電子報訂閱單"
+"Update","更新密碼錯誤"
+"Billing Information","收款資料"
+"Last Viewed Items","最後查看商品"
+"Sign Up for Newsletter","訂閱電子報"
 "Edit Newsletter Subscription","編輯新聞訂閱單"
-"Address Information","Address Information"
+"Address Information","地址資料"
 "Edit Address Entry","編輯地址欄位"
 "Edit Account Information","編輯帳戶資訊"
-"Additional Address Entries","Additional Address Entries"
+"Additional Address Entries","額外地址欄位"
 "You have no additional entries in your address book.","您的地址簿已經沒有其他的欄位了。"
-"Forgot Your Password?","Forgot Your Password?"
-"My Wishlist","My Wishlist"
-"By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.","By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more."
+"Forgot Your Password?","忘記了您的密碼？"
+"My Wishlist","我的收藏"
+"By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.","建立一個新的帳號可以使您快速的完成訂單，安排多個寄送地址，單看和追蹤您的訂單等等方便的功能。"
 "You have placed no products yet.","您還沒有加入任何產品。"
-"Newsletters","Newsletters"
+"Newsletters","電子報訂閱"
 "Your account balance is: %s","您帳號內的餘額為： %s"
 "You have no additional address entries in your address book.","您的地址簿已經沒有其他的地址欄位了。"
-"Registered Customers","Registered Customers"
-"Default Billing Address","Default Billing Address"
-"Confirm Password","Confirm Password"
-"New Address","New Address"
-"Grand Total: %s","Grand Total: <strong>%s</strong>"
-"Use as my default billing address","Use as my default <strong>billing</strong> address"
-"Are you sure you want to delete this address?","Are you sure you want to delete this address?"
-"Save","Save"
-"Current Password","Current Password"
+"Registered Customers","註冊客戶"
+"Default Billing Address","預設的收款地址"
+"Confirm Password","密碼確認"
+"New Address","新地址"
+"Grand Total: %s","總價： <strong>%s</strong>"
+"Use as my default billing address","設定為我的預設 <strong>收款</strong> 地址"
+"Are you sure you want to delete this address?","你確定要刪除此地址嗎？"
+"Save","儲存"
+"Current Password","目前密碼"
 "You are currently subscribed to 'General Subscription'.","您目前已訂閱：'一般訂閱'"
-"Edit Personal Information","Edit Personal Information"
-"Continue Shopping","Continue Shopping"
-"Manage Addresses","Manage Addresses"
+"Edit Personal Information","編輯個人資料"
+"Continue Shopping","繼續購物"
+"Manage Addresses","管理地址"
 "View Order List","查看訂單列表"
-"Change Billing Address","Change Billing Address"
+"Change Billing Address","更改收款地址"
 "Items Order","Items Order"
-"Primary Shipping Address","Primary Shipping Address"
-"* Required Fields","* Required Fields"
+"Primary Shipping Address","主要的寄送地址"
+"* Required Fields","* 必須欄位"
 "You have no primary entries in your address book.","您尚未設定地址簿中的主要郵寄地址。"
 "From your My Account Dashboard you have the ability to view a snapshot of your recent account activity. Select a link below to view.","From your My Account Dashboard you have the ability to view a snapshot of your recent account activity. Select a link below to view."
-"Default Shipping Address","Default Shipping Address"
-"New Customers","New Customers"
-"Save Address","Save Address"
-"Use as my default shipping address","Use as my default <strong>shipping</strong> address"
+"Default Shipping Address","預設的寄送地址"
+"New Customers","新用戶"
+"Save Address","儲存地址"
+"Use as my default shipping address","設定為我的預設 <strong>寄送</strong> 地址"
 "You are currently subscribed to our newsletter.","您目前已訂閱我們的新聞"
 "Change Password","Change Password"
 "You have placed no orders yet.","您還沒有加入任何訂單。"
-"Account Information","Account Information"
-"Back","Back"
-"Save Password","Save Password"
-"Please enter your email below and we\'ll send you a new password.","Please enter your email below and we\'ll send you a new password."
-"Sign up for our newsletter","Sign up for our newsletter"
-"Order #%s (%s)","Order #%s (%s)"
-"Contact Information","Contact Information"
-"Primary Billing Address","Primary Billing Address"
-"Order List...","Order List..."
-"Status","Status"
-"Order #","Order #"
-"My Reviews","My Reviews"
-"New Password","New Password"
-"Date","Date"
-"Login or Create an Account","Login or Create an Account"
-"Shipping Method","Shipping Method"
-"Confirm New Password","Confirm New Password"
-"Shipping Information","Shipping Information"
-"You are currently subscribed to no newsletters.","You are currently subscribed to no newsletters."
-"If you have an account with us, please log in.","If you have an account with us, please log in."
-"General Subscription","General Subscription"
-"Last 5 Orders","Last 5 Orders"
-"Login Information","Login Information"
-"New Address Entry","New Address Entry"
-"Qty","Qty"
-"Shoppping Cart","Shoppping Cart"
-"Hello, %s!","Hello, %s!"
-"Personal Information","Personal Information"
-"Submit","Submit"
-"Default Addresses","Default Addresses"
-"Details","Details"
-"Please select region, state or province","Please select region, state or province"
-"Product","Product"
-"Delete Address","Delete Address"
-"Price","Price"
-"This is My Primary %s Address","This is My Primary <strong>%s</strong> Address"
-"Street Address 2","Street Address 2"
-"Address","Address"
+"Account Information","帳戶資料"
+"Back","回上頁"
+"Save Password","儲存密碼"
+"Please enter your email below and we\'ll send you a new password.","請輸入您的電子郵件地址，我們將會寄給您新的密碼。"
+"Sign up for our newsletter","訂閱電子報"
+"Order #%s (%s)","訂單 #%s (%s)"
+"Contact Information","聯絡資料"
+"Primary Billing Address","主要收款地址"
+"Order List...","訂單表..."
+"Status","狀態"
+"Order #","訂單號碼 #"
+"My Reviews","我的評論"
+"New Password","新密碼不符合"
+"Date","日期"
+"Login or Create an Account","登入或是建立一個帳戶"
+"Shipping Method","寄送方式"
+"Confirm New Password","確認新密碼"
+"Shipping Information","寄送資料"
+"You are currently subscribed to no newsletters.","您目前並未訂閱任何電子報"
+"If you have an account with us, please log in.","如果您已有帳戶，請登入。"
+"General Subscription","一般訂閱"
+"Last 5 Orders","前 5 個訂單"
+"Login Information","登入資料"
+"New Address Entry","新地址輸入"
+"Qty","數量"
+"Shoppping Cart","購物車"
+"Hello, %s!","您好, %s!"
+"Personal Information","個人資料"
+"Submit","提交"
+"Default Addresses","預設地址"
+"Details","詳細資料"
+"Please select region, state or province","請選擇地域，州或是省"
+"Product","產品"
+"Delete Address","刪除地址"
+"Price","價格"
+"This is My Primary %s Address","這是我的主要 <strong>%s</strong> 地址"
+"Street Address 2","街道地址 2"
+"Address","地址"
 "To Cart","To Cart"
-"Password","Password"
+"Password","密碼"
 "Wishlist","希望清單"
-"Go to Address Book","Go to Address Book"
+"Go to Address Book","到地址簿"
 "You have been successfully logged out and will be redirected to our homepage in 5 seconds.","您目前已經登出，將於 5 秒後返回我們的首頁。"
-"Email Address","Email Address"
-"Remove","Remove"
+"Email Address","電子郵件"
+"Remove","刪除地址"
 "You have no default billing address in your address book.","您尚未設定地址簿中預設的收款地址。"
-"Create an Account","Create an Account"
-"Total","Total"
-"Addresses","Addresses"
-"Subscribe","Subscribe"
+"Create an Account","建立一個帳戶"
+"Total","合計"
+"Addresses","地址"
+"Subscribe","訂閱"
 "You have no default shipping address in your address book.","您尚未設定地址簿中預設的郵寄地址。"
-"Change Shipping Address","Change Shipping Address"
-"Retrieve your password here","Retrieve your password here"
-"Newsletter","Newsletter"
-"Save Subscription","Save Subscription"
+"Change Shipping Address","更改寄送地址"
+"Retrieve your password here","提取您的密碼"
+"Newsletter","電子報訂閱"
+"Save Subscription","儲存訂閱資料"
