--- a/trunk/app/locale/zh_TW/Mage_Adminhtml.csv
+++ b/trunk/app/locale/zh_TW/Mage_Adminhtml.csv
@@ -435,7 +435,7 @@
 "Enabled","開啟"
 "All","所有"
 "Integer","整數"
-"Bill to Last name","開帳單給姓"
+"Bill to Last name","開帳單時使用姓"
 "Backup","備份"
 "Dropdown","下拉式"
 "New Store","新商店"
@@ -503,80 +503,80 @@
 "Save Store","儲存商店"
 "Percent of product price discount","商品折價百分比"
 "Save Page","儲存此頁"
-"Error while saving this tax class. Please try again later.","Error while saving this tax class. Please try again later."
-"Customers Only","Customers Only"
-"Catalog Price Rule","Catalog Price Rule"
-"Customer doesn't have primary billing address","Customer doesn't have primary billing address"
-"Virtual Products","Virtual Products"
-"Add New Answer","Add New Answer"
-"Unable to find a poll to delete","Unable to find a poll to delete"
-"All tags","All tags"
-"%s Tax Classes Title","%s Tax Classes Title"
-"Product name","Product name"
+"Error while saving this tax class. Please try again later.","儲存稅別時發生錯誤。請稍後再試。"
+"Customers Only","只限客戶"
+"Catalog Price Rule","目錄價格規則"
+"Customer doesn't have primary billing address","客戶無主要收款地址"
+"Virtual Products","虛擬產品"
+"Add New Answer","增加新的答案"
+"Unable to find a poll to delete","無法找到要刪除的投票"
+"All tags","所有標籤"
+"%s Tax Classes Title","%s 稅別標題"
+"Product name","商品名稱"
 "(Will make search for the query above return results for this search.)","(Will make search for the query above return results for this search.)"
-"Subcribed","Subcribed"
-"Edit Group","Edit Group"
-"Number Viewed","Number Viewed"
-"Rating Information","Rating Information"
-"Bill to First name","Bill to First name"
-"Attribute set successfully saved.","Attribute set successfully saved."
-"Attribute Model","Attribute Model"
-"Error while saving this tax rule. Please try again later.","Error while saving this tax rule. Please try again later."
-"Attribute with the same code already exists","Attribute with the same code already exists"
-"Qty Returned","Qty Returned"
-"Delete Template","Delete Template"
-"Add Answer","Add Answer"
-"Add New Tag","Add New Tag"
-"Save Review","Save Review"
-"Answer was successfully saved","Answer was successfully saved"
-"Delete Search","Delete Search"
-"New Poll","New Poll"
-"Please, select Rate","Please, select Rate"
-"Save Role","Save Role"
-"All rates were imported","All rates were imported"
-"Reviews","Reviews"
-"Edit Invoice","Edit Invoice"
-"Multiple Select","Multiple Select"
-"Visible","Visible"
-"Rating","Rating"
-"Template Name","Template Name"
-"Product Type","Product Type"
-"Please select a customer","Please select a customer"
-"Tax rate was successfully deleted","Tax rate was successfully deleted"
-"Free ground shipping","Free ground shipping"
-"Default price","Default price"
-"Disabled","Disabled"
-"No description","No description"
-"Delete Tag","Delete Tag"
-"Product saved","Product saved"
-"Please select a store","Please select a store"
-"This rule no longer exists","This rule no longer exists"
-"This rule no longer exists","This rule no longer exists"
-"Ratings","Ratings"
-"Save Currency","Save Currency"
-"Ship to Last name","Ship to Last name"
-"Add New Search","Add New Search"
-"Delete Poll","Delete Poll"
-"Priority","Priority"
-"Product Reviews","Product Reviews"
-"Invoice was not charged","Invoice was not charged"
-"Sent","Sent"
-"Assigned Options","Assigned Options"
-"Tax rule was successfully saved","Tax rule was successfully saved"
-"IP Address","IP Address"
-"Settings","Settings"
-"Queue Subject","Queue Subject"
-"Add New Category","Add New Category"
-"Inactive","Inactive"
-"Add New Customer","Add New Customer"
-"Apply To Configurable/Grouped Product","Apply To Configurable/Grouped Product"
-"Use In Layered Navigation<br/>(Can be used only with catalog input type 'Dropdown')","Use In Layered Navigation<br/>(Can be used only with catalog input type 'Dropdown')"
-"Customer was deleted","Customer was deleted"
-"Please fill in 'email' field.","Please fill in 'email' field."
-"Qty Cancelled","Qty Cancelled"
-"Sending","Sending"
-"Searchable on Front-end","Searchable on Front-end"
-"Duplicate","Duplicate"
+"Subcribed","已訂閱"
+"Edit Group","編輯群組"
+"Number Viewed","查看次數"
+"Rating Information","評比資料"
+"Bill to First name","開帳單時使用名"
+"Attribute set successfully saved.","屬性組已設定成功"
+"Attribute Model","屬性模式"
+"Error while saving this tax rule. Please try again later.","儲存稅則中發生錯誤。請稍後再試。"
+"Attribute with the same code already exists","同樣代號的屬性已存在"
+"Qty Returned","退還數量"
+"Delete Template","刪除模組"
+"Add Answer","增加答案"
+"Add New Tag","增加新標籤"
+"Save Review","儲存評比"
+"Answer was successfully saved","答案已儲存成功"
+"Delete Search","刪除搜索"
+"New Poll","新投票"
+"Please, select Rate","請選擇率"
+"Save Role","儲存角色"
+"All rates were imported","所有率已匯入成功"
+"Reviews","評論已成功儲存"
+"Edit Invoice","編輯發票號 #%s"
+"Multiple Select","多重選擇"
+"Visible","可顯示"
+"Rating","評比"
+"Template Name","模板名稱"
+"Product Type","產品種類"
+"Please select a customer","請選擇客戶"
+"Tax rate was successfully deleted","稅率已成功刪除"
+"Free ground shipping","免費陸運"
+"Default price","預設價錢"
+"Disabled","關閉"
+"No description","無敘述"
+"Delete Tag","刪除標籤"
+"Product saved","產品已存檔"
+"Please select a store","請選擇商店"
+"This rule no longer exists","此規則已不存在"
+"This rule no longer exists","此規則已不存在"
+"Ratings","評比"
+"Save Currency","儲存幣種"
+"Ship to Last name","寄送使用姓"
+"Add New Search","增加新的搜索"
+"Delete Poll","刪除投票"
+"Priority","優先順序"
+"Product Reviews","產品評論"
+"Invoice was not charged","發票未收款"
+"Sent","已寄出"
+"Assigned Options","指派選項"
+"Tax rule was successfully saved","稅則已成功儲存"
+"IP Address","IP 地址"
+"Settings","設定"
+"Queue Subject","佇列標題"
+"Add New Category","增加新的目錄"
+"Inactive","未開啟"
+"Add New Customer","增加新的客戶"
+"Apply To Configurable/Grouped Product","套用於 可設定/團體的 產品"
+"Use In Layered Navigation<br/>(Can be used only with catalog input type 'Dropdown')","在多層瀏覽中使用<br/>(只能當目錄輸入類別為 '下拉式' 時使用)"
+"Customer was deleted","客戶已被刪除"
+"Please fill in 'email' field.","請填入 '電子郵件' 欄"
+"Qty Cancelled","取消數量"
+"Sending","寄出中"
+"Searchable on Front-end","可在前台搜索"
+"Duplicate","重複"
 "Wrong tab configuration","Wrong tab configuration"
 "Add New Page","Add New Page"
 "Edit ""%s""","Edit ""%s"""
